# CPython-tweaks

./: .gitignore  fib.c  mandelbrot_set.c  mandelbrot_set_sleef.c  meson.build
fibonacci/: main.c  setup.py
mandelbrot_set/: README.md  main.c  main.cpp  notebook.ipynb  optimized.cpp  optimized_colorscheme1.cpp  setup.py
